--- a/style.css
+++ b/style.css
@@ -15,9 +15,6 @@
     justify-content: space-around;
     align-items: center;
     padding-top: 50px;
-    /* margin-right:226px;
-    margin-left: 226px; */
-
 }
 .nav ul{
     list-style: none;
@@ -43,15 +40,16 @@
     align-items: center;
     gap: 40px;
 }
-header{
+.header{
     max-width: 1600px;
     max-height: 836px;
-    background-image: url('../images/developer.png'),url('../images/header_bg.png');
+    margin: 0 auto;
+    background-image: url('./images/developer.png'),url('./images/header_bg.png');
     background-repeat: no-repeat;
     /* background-size: cover; */
- background-position: top left, bottom right;
- background-color: rgba(255, 248, 243, 1);
- margin-left: 10px;
+     background-position: top left, bottom right;
+      margin-left: 10px;
+      background-color: white;
 
 }
 .btn{
@@ -60,19 +58,18 @@ header{
     padding: 10px 20px;
     text-align: center;
     border: none;
-    font-size: 20px;
+    font-size:1.25rem;
     border-radius: 8px;
    cursor: pointer;
 }
 .heade-title{
     display: flex;
-    /* justify-content:space-evenly; */
     align-items:center;
     gap: 20px;
     
 }
 .title h4{
-    font-size: 40px;
+    font-size: 2.5rem;
  
 
 }
@@ -325,7 +322,81 @@ text-align: c;
 
 
 }
+/* footer section */
+.footer-section{
+    background-color: #FFF8F3;
+    max-width: 1600px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.footre-div2{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: start;
+    margin-top: 130px;
+   
+}
+.footre-div{
+    margin-top: 130px;
+}
+.div-fotter-contaner{
+    max-width: 1140px;
+    margin: 0px auto;
+    /* display:flex;
+    justify-content: space-evenly; */
+    display: grid;
+    grid-template-columns:repeat(2,1fr) ;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    margin:130px 230px;
+    gap: 300px;
+}
+.input-name{
+ 
+    max-width: 461px;
+    max-height: 64px;
+    border-radius: 5px;
+    border: none;
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    padding: 18px 0;
+    padding-left: 10px;
+}
+.input-name ::placeholder{
+    color: rgb(117, 117, 117);
+font-family: Open Sans;
+font-size: 1rem;
+font-weight: 400;
+line-height: 28px;
+/* padding: 18px 0;
+padding-left: 10px; */
 
+
+}
+.input-name-message{
+    /* padding: 80px 60px; */
+    border-radius: 5px;
+    border: none;
+    background: rgb(255, 255, 255);
+    padding: 50px 0;
+    max-width: 461px;
+    max-height: 180px;
+    color: rgb(117, 117, 117);
+    text-align: start;
+    padding-left: 10px;
+}
+.footer-btn{
+    width: 130px;
+
+}
+.footer-section h2{
+    color:black;
+    font-size: 2.1rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 25px;
+}
 
 
 /* responsive what i do */
@@ -419,5 +490,19 @@ text-align: c;
     text-align: center;
     padding: 10px;
     
+}
+/* footer section */
+.div-fotter-contaner{
+    grid-template-columns: 1fr;
+    justify-content: center;
+    gap: 20px;
+    margin:30px 10px;
+}
+.footre-div,.footre-div2{
+    margin: 40px;
+    
+}
+.title h1{
+    font-size:4rem;
 }
 }
