--- a/style.css
+++ b/style.css
@@ -375,13 +375,10 @@ padding-left: 10px; */
 
 }
 .input-name-message{
-    /* padding: 80px 60px; */
     border-radius: 5px;
     border: none;
-    background: rgb(255, 255, 255);
-    padding: 50px 0;
-    max-width: 461px;
-    max-height: 180px;
+    background-color: rgb(255, 255, 255);
+    max-height:100px;
     color: rgb(117, 117, 117);
     text-align: start;
     padding-left: 10px;
@@ -396,6 +393,10 @@ padding-left: 10px; */
     font-weight: bold;
     text-align: center;
     margin-bottom: 25px;
+}
+body{
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 
@@ -505,4 +506,45 @@ padding-left: 10px; */
 .title h1{
     font-size:4rem;
 }
+}
+
+/*responsive for tab */
+
+@media screen and (min-width:567px) and (max-width:992px){
+
+    .SEC-SKILL{
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+    }
+    .do{
+        margin: 0px 10px;
+    }
+    /* resume */
+    .div-res{
+        grid-template-columns: 1fr;
+        justify-content: center;
+        
+       }
+       .div-fotter-contaner{
+        margin: 50px 70px;
+        gap: 80px;
+        
+       }
+       .about{
+        margin: 0px;
+       }
+       .about-title{
+        margin: 55px 10px;
+
+       }
+       .education-info,
+       .Experience-div
+       {
+        text-align: center;
+        max-width: 700px;
+       border: 1px solid thistle;
+       padding: 10px;
+       }
+
+    
 }
